feat: 异常处理